sunset/apps-bak/2-hello/hello-ilb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hello-ilb
  name: hello-ilb-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-ilb
  template:
    metadata:
      labels:
        app: hello-ilb
    spec:
      containers:
      - image: gcr.io/gke-service-project-1b/hello-app:v1
        name: hello-ilb-container
        ports:
        - containerPort: 8080
          protocol: TCP
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: hello-ilb-svc
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    app: hello-ilb
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.4.55
  ports:
  - nodePort: 30055
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: hello-ilb
